demo-ng/app/app.css
/*
In NativeScript, the app.css file is where you place CSS rules that
you would like to apply to your entire application. Check out
http://docs.nativescript.org/ui/styling for a full list of the CSS
selectors and properties you can use to style UI components.

/*
In many cases you may want to use the NativeScript core theme instead
of writing your own CSS rules. For a full list of class names in the theme
refer to http://docs.nativescript.org/ui/theme.
*/
@import 'nativescript-theme-core/css/core.light.css';

.tab-content {
  margin: 8;
}

label {
  padding: 6;
  font-size: 14;
  text-align: center;
}

.h2 {
  font-size: 17;
  font-weight: bold;
  margin: 22 0 0 0;
}

button {
  background-color: #6494AA;
  padding: 8 10;
  margin: 4 8;
  font-size: 13;
  border-radius: 4;
}

.button {
  color: #ffffff;
}

.button-positive {
  background-color: #90A959;
}

.button-user {
  background-color: #E0A458;
}

.button-state {
  background-color: #64A4FF;
}

.button-company {
  background-color: #A63D40;
}

.button-storage {
  background-color: #54AA77;
}

.button-analytics {
  background-color: #BBBB77;
}

.button-messaging {
  background-color: #6d996c;
}

.button-crash {
  background-color: #d52c1e;
}

.button-invites {
  background-color: #1832d5;
}

Label.mlkit-result {
  margin: 5;
  text-align: left;
  color: white;
}

.mask {
  background-color: rgba(0,0,0,0.2);
}

.frame-top-left {
  border-top-width: 3;
  border-left-width: 3;
  border-color: #51B8ED;
}

.frame-top-right {
  border-top-width: 3;
  border-right-width: 3;
  border-color: #51B8ED;
}

.frame-bottom-left {
  border-bottom-width: 3;
  border-left-width: 3;
  border-color: #51B8ED;
}

.frame-bottom-right {
  border-bottom-width: 3;
  border-right-width: 3;
  border-color: #51B8ED;
}

.swing {
  animation-name: swingAnimation;
  animation-duration: 6s;
  animation-iteration-count: infinite;
  animation-timing-function: cubic-bezier(0.42,0,1,1);
}

@keyframes swingAnimation {
  0% { 
      transform: translate(0, 0); 
  }
  50% { 
      transform: translate(0, 300); 
  }
  100% {
      transform: translate(0, 0);
  }
}

.close-btn {
  border-radius: 15;
  background-color: rgba(0, 0, 0, 0.2);
  height: 25;
  width: 25;
  text-align: center;
  vertical-align: top;
  margin-top: 10;
  color: white;
  padding: 3;
}

